Removed support for old config versions.